--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 *{
     background-color: #3D2B1F;
+    color: antiquewhite;
 }
+
+.calculator{
+    min-height: 500px;
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttons{
+    display: flex;
+    flex-grow: 1;
+}
+
+.numbers{
+    display: flex;
+    flex-direction: column;
+}
+
+.operators{
+    display: flex;
+    flex-direction: column;
+}
+
+.btnRow{
+    display: flex;
+}
+
