--- a/style.css
+++ b/style.css
@@ -3,30 +3,74 @@
     color: antiquewhite;
 }
 
-.calculator{
-    min-height: 500px;
-    min-width: 200px;
+html{
+    height: 100%;
+}
+
+body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    flex-grow: 1;
+
+}
+
+.calculator{
+    min-height: 350px;
+    min-width: 250px;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.display{
+    display: flex;
+    min-height: 20%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
 }
 
 .buttons{
     display: flex;
     flex-grow: 1;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .numbers{
     display: flex;
     flex-direction: column;
+    width: 60%;
+    flex-grow: 1;
 }
 
 .operators{
     display: flex;
     flex-direction: column;
+    width: 40%;
+    flex-grow: 1;
 }
 
 .btnRow{
     display: flex;
+    flex-grow: 1;
 }
+
+.btn{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+}
+
+#AC{
+    background-color: #560319
+}
+
 
