--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
-    background-color: #3D2B1F;
-    color: antiquewhite;
+@font-face {
+  font-family: calcDisplay;
+  src: url('Fonts/digital-7.ttf'); 
 }
 
 html{
@@ -13,12 +13,15 @@ body{
     align-items: center;
     height: 100%;
     flex-grow: 1;
-
+    background-color: #3D2B1F;
 }
 
 .calculator{
-    min-height: 350px;
-    min-width: 250px;
+    border: 2px solid black;
+    background-color: #333333;
+    min-height: 400px;
+    min-width: 300px;
+    padding: 25px;
     margin-top: 5%;
     display: flex;
     flex-direction: column;
@@ -27,12 +30,17 @@ body{
 }
 
 .display{
+    font-family: calcDisplay,sans-serif;
+    font-size: 200%;
+    background-color: #cccccc;
+    color: #3D2B1F;
     display: flex;
     min-height: 20%;
     width: 100%;
     align-items: center;
     justify-content: center;
     border: 1px solid white;
+    margin: 20px;
 }
 
 .buttons{
@@ -40,6 +48,7 @@ body{
     flex-grow: 1;
     width: 100%;
     justify-content: space-between;
+    margin: 10px;
 }
 
 .numbers{
@@ -52,8 +61,21 @@ body{
 .operators{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 40%;
     flex-grow: 1;
+}
+
+#opRow1{
+    max-height: 25%;
+    width: 100%;
+    align-self:flex-end;
+}
+
+#bottomOps{
+    display: flex;
+    flex-direction: column;
+    height: 50%;
 }
 
 .btnRow{
@@ -62,16 +84,39 @@ body{
 }
 
 .btn{
-    flex-grow: 1;
+    background-color: #3D2B1F;
+    color: antiquewhite;
+    border: 1px solid black;
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     align-items: center;
-    border: 1px solid white;
     cursor: pointer;
+    margin: 2px;
+    border-radius: 15px;
+}
+
+.footer{
+    color: antiquewhite;
+    a{
+        color: lightblue
+    }
 }
 
 #AC{
     background-color: #560319
 }
 
+.num{
+    background-color: #0e1a40;
+}
+
+.op{
+    background-color: #1a472a;
+}
+
+.eq{
+    background-color: #0057e7;
+    color: black;
+}
 
